--- a/css/anime.css
+++ b/css/anime.css
@@ -6,8 +6,8 @@
 }
 
 .maincard img {
-    min-width: 275px;
-    min-height: auto;
+    max-width: 275px;
+    max-height: auto;
     margin: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
@@ -63,7 +63,10 @@ p {
         align-items: center;
         justify-content: center;
     }
-
+    .maincard img{
+        max-height: 30vh;
+        max-width: fit-content;
+    }
     .maincard p {
         text-align: justify;
         display: block;
