--- a/css/anime.css
+++ b/css/anime.css
@@ -3,17 +3,21 @@
     box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
     padding-bottom: 10px;
     margin-bottom: 15px;
+    width: 100vw;
+    height: 100%;
 }
 
 .maincard img {
-    max-width: 275px;
-    max-height: auto;
+    min-width: 275px;
+    min-height: auto;
     margin: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .maincard p {
     font-family: 'Roboto Mono', monospace;
+    display: block;
+    margin: auto;
 }
 
 .maincard b {
@@ -56,20 +60,22 @@ p {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 750px) {
     .maincard {
         display: flex;
+        width: 100vw;
+        height: 100%;
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
     }
     .maincard img{
-        max-height: 30vh;
-        max-width: fit-content;
+        max-height: 40vh;
+        max-width: 30vw;
     }
     .maincard p {
         text-align: justify;
         display: block;
-        margin: 1px;
+        margin: 0 5px 0 5px;
     }
 }
