--- a/css/anime.css
+++ b/css/anime.css
@@ -5,6 +5,7 @@
     margin-bottom: 15px;
     width: 100vw;
     height: 100%;
+    color: #fae5ad;
 }
 
 .maincard img {
@@ -20,15 +21,6 @@
 
 .maincard b {
     font-size: 2rem
-}
-
-a {
-    text-decoration: none;
-    color: #fff;
-}
-
-a:hover {
-    color: #fff;
 }
 
 .name {
@@ -67,10 +59,12 @@ p {
         align-items: center;
         justify-content: center;
     }
-    .maincard img{
+
+    .maincard img {
         max-height: 40vh;
         max-width: 30vw;
     }
+
     .maincard p {
         text-align: justify;
         margin: 0 10px 0 10px;
