--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     min-height: 100vh;
     min-width: 100vw;
     box-sizing: border-box;
     background-image: linear-gradient(to bottom right, #281d38, #404177, #C9D6E2);
     overflow-x: hidden;
 }
-.title img{
+
+.title img {
     display: block;
 }
-.navbar-brand{
+
+.navbar-brand {
     color: #fff;
     font-weight: bolder;
     font-family: "Lobster", cursive;
     font-size: 2rem;
 
 }
-.srch{
+
+.srch {
     background-color: transparent;
     outline: none;
 }
-#testimonals{
+
+.message {
+    color: #fffcdc;
+    font-weight: bolder;
+    font-size: larger;
+    display: block;
+
+}
+
+#testimonals {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,7 +48,8 @@ body{
     font-family: 'Times New Roman', Times, serif;
     width: 100vw;
 }
-#testimonals h2{
+
+#testimonals h2 {
     font-size: 1.5rem;
     color: #fff;
     font-weight: bold;
@@ -43,50 +58,62 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#testimonals img{
+
+#testimonals img {
     opacity: 50%;
 }
-.carousel-inner{
+
+.carousel-inner {
     display: flex;
 }
-#features h3{
+
+#features h3 {
     font-weight: bold;
     color: #fff;
     font-family: 'Times New Roman', Times, serif;
 }
-.card{
+
+.card {
     width: 11rem;
 }
-.card:hover{
+
+.card:hover {
     cursor: pointer;
     width: 12rem;
     transition: .2s ease;
 }
-.viewmore{
+
+.viewmore {
     display: block;
     margin: auto;
     text-align: center;
 }
-.viewmore .viewbtn{
+
+.viewmore .viewbtn {
     margin: 10px;
 }
-#footer{
+
+#footer {
     text-align: center;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
-#footer i{
+
+#footer i {
     cursor: pointer;
 }
-#footer i:hover{
+
+#footer i:hover {
     border: 1px solid #111;
     background-color: #fff;
     color: #111;
 }
-hr{
+
+hr {
     color: #fff;
     font-weight: bolder;
 }
-b{
+
+b {
     font-family: "Lobster";
 }
