--- a/css/signup.css
+++ b/css/signup.css
@@ -3,12 +3,9 @@
     display: grid;
     place-items: center;
     box-sizing: border-box;
-    min-height: 110vh;
-    min-width: 100vw;
-    position: fixed;
-    top: 0;
+    min-height: 100vh;
+    min-width: 100%;
     transition: transform 0.4s;
-    z-index: 1;
     color: #fffcdc;
 }
 
@@ -46,8 +43,8 @@
 #name,
 #age,
 #email {
-    height: 50px;
-    min-width: 350px;
+    max-height: 50px;
+    min-width: 80%;
     /* outline: none; */
     background: transparent;
     padding: 10px 20px;
@@ -95,7 +92,7 @@
 
 #signup .b1 {
     height: 50px;
-    min-width: 350px;
+    width: 70%;
     border: 3px solid #914cff;
     /* outline: none; */
     /* background: transparent; */
@@ -125,4 +122,25 @@
     border-radius: 10px;
     font-size: 2rem;
     font-weight: bolder;
+}
+
+@media only screen and (max-width: 750px) {
+    #signup .signup {
+        min-width: 80%;
+        max-height: auto;
+    }
+
+    #username,
+    #pass,
+    #name,
+    #age,
+    #email {
+        height: 45;
+        min-width: 90%;
+    }
+
+    #signup .b1 {
+        height: auto;
+        min-width: 80%;
+    }
 }
